1) fixed arrow icon missing from menu 2) fixed firefox's library window inactive buttons opacity :) 3) yeeted viewport file, added changes to  list file 4) changed menubar items padding 5) finally fixed scale and progressbar ;-; 6) fixed distorted circular buttons 7) added levelbar too(forgot ;-;)

--- a/scss/gtk-3.0/applications/_firefox.scss
+++ b/scss/gtk-3.0/applications/_firefox.scss
@@ -10,7 +10,8 @@
   // bar that contains inactive tabs
   // TODO: find out if the gtk headerbar (the one with decorations) can be themed as well
   menubar {
-    color: colors.$black-weakest;
+    // firefox's library window menubar color !!!
+    color: colors.$black-strong;
     background: colors.$surface-strongest;
   }
 
