--- a/scss/gtk-3.0/widgets/_toolbar.scss
+++ b/scss/gtk-3.0/widgets/_toolbar.scss
@@ -7,7 +7,7 @@ toolbar, .toolbar {
   padding: config.$spacing-medium;
 
   &.osd {
-    background: colors.$black-weakest;
+    background: colors.$black-weak;
     padding: config.$spacing-medium;
     border-radius: config.$radius;
   }
